--- a/src/app/components/utility/timestamp/timestamp.component.scss
+++ b/src/app/components/utility/timestamp/timestamp.component.scss
@@ -19,3 +19,10 @@
     border: 1px solid red;
     padding: 0.5rem 0rem;
 }
+
+@media(max-width: 768px){
+	.row{
+        margin-bottom: 1rem;
+        line-height: 1.2;
+    }
+}
