--- a/src/app/components/articles/session-audio-overview/session-audio-overview.component.html
+++ b/src/app/components/articles/session-audio-overview/session-audio-overview.component.html
@@ -1,38 +1,45 @@
 <div class="main">
-    <article *ngIf="sessionAudioFiles; else loading">
+    <article *ngIf="sessionAudioFiles; else loading" class="container">
         <h1 class="text-center">Session Audio Files</h1>
 
-        <div class="container">
-            <div class="row">
-                <!-- Normal Session Audio Cards -->
-                <div class="col-lg-3" *ngFor="let sessionAudio of sessionAudioFiles">
-                    <div class="card my-3">
-                        <div class="card-header"> 
-                            <h4 class="text-center card-title ">{{ sessionAudio.name }}</h4>
-                        </div>
-                        <!-- TODO: Fix the download button somehow -->
-                        <div class="card-body d-flex justify-content-center flex-column">
-                            <a routerLink="{{constants.getRoutePath(router, 'sessionaudio', {isMainSession: sessionAudio.session_details.is_main_session_int, sessionNumber: sessionAudio.session_details.session_number})}}"
-                               class="text-center btn btn-primary"> 
-                                <strong> Stream </strong> 
-                            </a>
-                        </div>
+        <div class="row">
+            <!-- Normal Session Audio Cards -->
+            <div class="col-md-4 col-sm-6" *ngFor="let sessionAudio of sessionAudioFiles">
+                <div class="card my-3">
+                    <!-- Card Title -->
+                    <div class="card-header">
+                        <h4 class="text-center card-title mb-0">{{ sessionAudio.name }}</h4>
+                    </div>
+
+                    <!-- Card Body -->
+                    <!-- TODO: Fix the download button somehow -->
+                    <div class="card-body d-flex justify-content-center flex-column">
+                        <a routerLink="{{constants.getRoutePath(router, 'sessionaudio', {isMainSession: sessionAudio.session_details.is_main_session_int, sessionNumber: sessionAudio.session_details.session_number})}}"
+                            class="text-center btn btn-primary"> 
+                            <strong> Stream </strong> 
+                        </a>
                     </div>
                 </div>
+            </div>
 
-                <!-- Add Session Audio card -->
-                <div class="col-lg-3" [ngClass]="{'d-none': !userHasCreatePermission()}">
-                    <div class="card my-3 h-87 pointer add-icon-card" routerLink="create">
-                        <div class="card-body d-flex justify-content-center align-items-center">
-                            <i class="fa fa-5x icon fa-plus-square-o" aria-hidden="true"></i> 
-                        </div>
+            <!-- Add Session Audio card -->
+            <div class="col-md-4 col-sm-6" [ngClass]="{'d-none': !userHasCreatePermission()}">
+                <div class="card my-3 h-87 pointer add-icon-card" routerLink="create">
+                    <div class="card-body d-flex justify-content-center align-items-center">
+                        <i class="fa fa-5x icon fa-plus-square-o" aria-hidden="true"></i> 
                     </div>
                 </div>
-
             </div>
 
         </div>
-        <div class="mt-5 btn btn-secondary" routerLink="{{constants.getRoutePath(router, 'home1')}}">Back To Frontpage</div>
+
+        <!-- Button To Frontpage -->
+        <div class="row mx-0">
+            <div class="col-md-3 mt-5 btn btn-secondary" routerLink="{{constants.getRoutePath(router, 'home1')}}">
+                Back To Frontpage
+            </div>
+        </div>
+
     </article>
     <!-- Loading Spinner -->
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
