Made button expand for mobile

--- a/src/app/components/articles/quest-overview/quest-overview.component.html
+++ b/src/app/components/articles/quest-overview/quest-overview.component.html
@@ -79,12 +79,15 @@
             </table>
         </div>
     
-        <div 
-        class="btn btn-secondary" 
-        routerLink="{{constants.getRoutePath(router, 'home1')}}"
-        >
-            Back To Frontpage
+        <div class="row mx-0">
+            <div 
+            class="btn btn-secondary col-md-3" 
+            routerLink="{{constants.getRoutePath(router, 'home1')}}"
+            >
+                Back To Frontpage
+            </div>
         </div>
+
 
     </article>
     <!-- Loading Spinner -->
