--- a/src/app/components/utility/encounter-accordion/encounter-accordion.component.scss
+++ b/src/app/components/utility/encounter-accordion/encounter-accordion.component.scss
@@ -56,7 +56,7 @@
 }
 
 #encounter-delete{
-    background-color: #383d40 !important;
+    background-color: #1b1f22 !important;
 }
 
 .panel-title .encounter-title, .panel-title .icon{
@@ -96,4 +96,8 @@ h4:hover .icon{
 
 .btn-outline-secondary:hover{
     background-color: #1b1f22;
+}
+
+.delete-request .btn-secondary{
+    background-color: #393e41;
 }
