--- a/src/app/components/utility/quote-gallery/quote-gallery.component.html
+++ b/src/app/components/utility/quote-gallery/quote-gallery.component.html
@@ -3,38 +3,65 @@
         <blockquote *ngIf="!isLoadingNextQuote; else loading">
             <!-- Quote -->
             <div [innerHTML]="quote.quote"></div>
-            <div class="ml-4">
-                <!-- Quote Description -->
-                <div class="mb-3">
-                    <span *ngIf="quote.description" [innerHTML]="'- ' + quote.description"></span>
-                    <span *ngIf="!quote.description"> - {{character.name}}</span>
-                </div>
-    
-                <!-- Quote Connections -->
-                <div class="quote-connections d-flex icon-container">
-                    <span class="mr-4 tag-label"> Characters: </span>
-    
-                    <div class="d-inline-flex align-items-center flex-wrap">
-                        <!-- Display Existing Quote Connections -->
-                        <span class="badge badge-secondary mr-2 text-center vanish-container" *ngFor="let connection of quote.connections">
-                            <a routerLink="{{constants.wikiUrlFrontendPrefix}}/character/{{connection.character_details.name}}">{{connection.character_details.name}}</a>
-                            <i class="fa fa-trash icon vanish-icon ml-2" (click)="deleteQuoteConnection(connection)" [ngClass]="{'d-none': !userHasDeletePermission()}"></i>
-                        </span>
-    
-                        <!-- Form for Creating Quote Connections -->
-                        <form [ngClass]="{'d-none':!inQuoteConnectionCreateState, 'd-inline-block': inQuoteConnectionCreateState}">
-                            <select class="form-control" name="character" id="character" [(ngModel)]="baseQuoteConnection.character">
-                                <option *ngFor="let character of characters" value="{{character.pk}}" [attr.disabled]="hasConnection(character) ? true : null">
-                                    {{character.name}}
-                                </option>
-                            </select>
-                        </form>
-    
-                        <i [ngClass]="{'fa icon mx-2': true, 'fa-plus hide-icon': !inQuoteConnectionCreateState, 'fa-times': inQuoteConnectionCreateState, 'd-none': !userHasCreatePermission()}"
-                        (click)="toggleQuoteConnectionCreateState()"></i>
-                        <i [ngClass]="{'fa icon': true, 'fa-check': inQuoteConnectionCreateState, 'd-none': !userHasCreatePermission()}" (click)="createQuoteConnection()"></i>
-                    </div>
-                </div>
+
+            <!-- Quote Description -->
+            <div class="mb-3 ml-4">
+                <span *ngIf="quote.description" [innerHTML]="'- ' + quote.description"></span>
+                <span *ngIf="!quote.description"> - {{character.name}}</span>
+            </div>
+
+            <hr class="white-line">
+
+            <!-- Quote Connections -->
+            <div class="quote-connections d-flex row icon-container">
+                <span class="col-md-2 col-4 tag-label"> Characters: </span>
+
+                <span class="d-inline-flex align-items-center flex-wrap">
+                    <!-- Display Existing Quote Connections -->
+                    <span class="badge badge-secondary mr-2 text-center vanish-container" *ngFor="let connection of quote.connections">
+                        <a routerLink="{{constants.getRoutePath(router, 'character', {name: connection.character_details.name})}}">
+                            {{connection.character_details.name}}
+                        </a>
+                        
+                        <i 
+                        class="fa fa-trash icon vanish-icon ml-2" 
+                        (click)="deleteQuoteConnection(connection)" 
+                        [ngClass]="{'d-none': !userHasDeletePermission()}"
+                        ></i>
+                    </span>
+
+                    <!-- Form for Creating Quote Connections -->
+                    <form [ngClass]="{'d-none':!inQuoteConnectionCreateState, 'd-inline-block': inQuoteConnectionCreateState}">
+                        <select class="form-control" name="character" id="character" [(ngModel)]="baseQuoteConnection.character">
+                            <option 
+                            *ngFor="let character of characters" 
+                            value="{{character.pk}}" 
+                            [attr.disabled]="hasConnection(character) ? true : null"
+                            >
+                                {{character.name}}
+                            </option>
+                        </select>
+                    </form>
+
+                    <i 
+                    class="fa icon mx-2"
+                    [ngClass]="{
+                        'fa-plus hide-icon': !inQuoteConnectionCreateState, 
+                        'fa-times': inQuoteConnectionCreateState, 
+                        'd-none': !userHasCreatePermission()
+                    }"
+                    (click)="toggleQuoteConnectionCreateState()"
+                    ></i>
+
+                    <i
+                    class="fa icon"
+                    [ngClass]="{
+                        'fa-check': inQuoteConnectionCreateState, 
+                        'd-none': !userHasCreatePermission()
+                    }" 
+                    (click)="createQuoteConnection()"
+                    ></i>
+                </span>
             </div>
         </blockquote>
 
@@ -65,7 +92,7 @@
         <form [formGroup]="form">
             <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
             <div class="btn btn-secondary mr-3" (click)="inCreateState=false; inEditState=false">Cancel</div>
-            <div type="submit" class="btn btn-outline-secondary" (click)="onSubmit()">Submit</div>
+            <div class="btn btn-secondary" (click)="onSubmit()">Submit</div>
         </form>
 
     </blockquote>
@@ -75,14 +102,21 @@
 <ng-template #deleteRequest>
     <div>
         Delete this quote?
-        <div class="btn btn-outline-secondary mr-2" (click)="inDeleteState=false"> No </div>
-        <div class="btn btn-outline-danger" (click)="deleteQuote()"> Yes </div>
+        <div class="btn btn-danger" (click)="deleteQuote()"> Yes </div>
+        <div class="btn btn-secondary mr-2" (click)="inDeleteState=false"> No </div>
     </div>
 </ng-template>
 
 <!-- Add New Quote Button If Character has no Quote -->
 <ng-template #addNewQuoteButton>
-    <div class="btn btn-dark" [ngClass]="{'d-none': !userHasCreatePermission()}" (click)="toggleCreateState()">
-        Add Quote
+    <div class="row">
+        <div 
+        class="btn btn-secondary col-md-3" 
+        [ngClass]="{'d-none': !userHasCreatePermission()}" 
+        (click)="toggleCreateState()"
+        >
+            Add Quote
+        </div>
     </div>
+
 </ng-template>
