changed timestamp list a bit for desktop

--- a/src/app/components/utility/timestamp/timestamp.component.scss
+++ b/src/app/components/utility/timestamp/timestamp.component.scss
@@ -20,9 +20,17 @@
     padding: 0.5rem 0rem;
 }
 
+.mw-85{
+    max-width: 85%;
+}
+
 @media(max-width: 768px){
 	.row{
         margin-bottom: 1rem;
         line-height: 1.2;
+    }
+
+    .mw-85{
+        max-width: 100%;
     }
 }
