--- a/src/app/components/utility/timestamp/timestamp.component.html
+++ b/src/app/components/utility/timestamp/timestamp.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!isInDeleteState; else deleteRequest" class="row">
+<div *ngIf="!isInDeleteState; else deleteRequest" class="row ml-auto mw-85">
     <!-- Timestamp Time -->
     <a (click)="vimePlayer.currentTime=timestamp.time" class="timestamp pointer col-3 px-0"> 
         {{timeToString(timestamp.time)}} 
