Modified Timestamp form to look better on mobile

--- a/src/app/components/articles/session-audio/session-audio.component.html
+++ b/src/app/components/articles/session-audio/session-audio.component.html
@@ -70,12 +70,15 @@
         </div>
 
         <!-- Timestamp List -->
-        <app-timestamp-list 
-        [timestamps]="timestamps"
-        [sessionAudio]="sessionAudio"
-        [vimePlayer]="vimePlayer"
-        [createTimestampEventSubject]="createTimestampEventSubject"
-        ></app-timestamp-list>
+        <div class="mb-4">
+            <app-timestamp-list 
+            [timestamps]="timestamps"
+            [sessionAudio]="sessionAudio"
+            [vimePlayer]="vimePlayer"
+            [createTimestampEventSubject]="createTimestampEventSubject"
+            ></app-timestamp-list>
+        </div>
+
 
         <!-- Footer (Move to other Article + Delete Article) -->
         <app-article-footer
