--- a/src/app/components/utility/timestamp/timestamp.component.html
+++ b/src/app/components/utility/timestamp/timestamp.component.html
@@ -1,11 +1,11 @@
 <div *ngIf="!isInDeleteState; else deleteRequest" class="row ml-auto mw-85">
     <!-- Timestamp Time -->
-    <a (click)="vimePlayer.currentTime=timestamp.time" class="timestamp pointer col-3 px-0"> 
+    <a (click)="vimePlayer.currentTime=timestamp.time" class="timestamp pointer col-lg-2 col-3 px-0"> 
         {{timeToString(timestamp.time)}} 
     </a>    
 
     <!-- Timestamp Name -->
-    <div class="col-8 px-0">{{timestamp.name}}</div>
+    <div class="col-lg-9 col-8 px-0">{{timestamp.name}}</div>
 
     <!-- Delete Timestamp -->
     <div class="col-1 px-0">
@@ -19,8 +19,8 @@
 
 <ng-template #deleteRequest>
     <div class="row">
-        <div class="col-1"></div>
-        <div class="col-7 timestamp-box">
+        <div class="col-lg-2 col-0"></div>
+        <div class="col-lg-7 col-12 timestamp-box">
             <span class="ml-2">Delete Timestamp?</span> 
             <div class="btn btn-danger btn-sm mx-3" (click)="deleteTimestamp()">Delete</div>
             <div class="btn btn-secondary btn-sm" (click)="toggleDeleteState()">Cancel</div> 
