--- a/src/app/components/utility/image-gallery/image-gallery.component.html
+++ b/src/app/components/utility/image-gallery/image-gallery.component.html
@@ -1,114 +1,116 @@
 <!-- Display State -->
-<div class="image-area icon-container mb-3 row" *ngIf="componentState===constants.displayState">
-    <!-- Prior Image Arrow -->
-    <i
-    class="col-md-1 col-2 fa fa-arrow-left fa-2x mr-5 icon"
-    [ngClass]="{'mouseoverVisible': !isLastImage(), 'deactivated-icon d-none': isLastImage()}" 
-    aria-hidden="true"
-    (click)="decreaseVisibleImageIndex()"
-    ></i>
-
-    <!-- Image Container -->
-    <div class="image-container" [ngClass]="{'col-md-10 col-8': !isLastImage(), 'col-12': isLastImage()}">
-
-        <!-- Images -->
-        <div *ngIf="hasImages(); else defaultImage">
-            <a [href]="constants.wikiUrl + image.image"
-            *ngFor="let image of images; let i = index"
-            (keydown)="changeMainImage($event)"
-            [ngClass]="{'main-image': i === visibleImageIndex, 'side-image': i !== visibleImageIndex}">
-                <img title="None" class="gallery-image" [src]="constants.wikiUrl + image.image" alt="">
-            </a>
+<div class="container">
+    <div class="image-area icon-container mb-3 row" *ngIf="componentState===constants.displayState">
+        <!-- Prior Image Arrow -->
+        <i
+        class="col-md-1 col-1 fa fa-arrow-left fa-1-5x icon"
+        [ngClass]="{'mouseoverVisible': !isLastImage(), 'deactivated-icon d-none': isLastImage()}" 
+        aria-hidden="true"
+        (click)="decreaseVisibleImageIndex()"
+        ></i>
+    
+        <!-- Image Container -->
+        <div class="image-container" [ngClass]="{'col-md-8 col-8': !isLastImage(), 'col-12': isLastImage()}">
+    
+            <!-- Images -->
+            <div *ngIf="hasImages(); else defaultImage">
+                <a [href]="constants.wikiUrl + image.image"
+                *ngFor="let image of images; let i = index"
+                (keydown)="changeMainImage($event)"
+                [ngClass]="{'main-image': i === visibleImageIndex, 'side-image': i !== visibleImageIndex}">
+                    <img title="None" class="gallery-image" [src]="constants.wikiUrl + image.image" alt="">
+                </a>
+            </div>
+    
+    
+            <!-- Image Edit/Delete/Create Buttons -->
+            <div class="edit-image-buttons">
+                <!-- Create Image Button -->
+                <i 
+                class="fa fa-plus-square-o fa-2x icon" 
+                [ngClass]="{'d-none': !userHasCreatePermission()}"  
+                aria-hidden="true" 
+                (click)="enableCreateState()"
+                ></i>
+    
+                <!-- Update Image button -->
+                <i 
+                class="fa fa-pencil fa-2x icon" 
+                [ngClass]="{'d-none': !userHasUpdatePermission()}" 
+                aria-hidden="true" 
+                (click)="enableUpdateState()"
+                ></i>
+    
+                <!-- Delete Image Button -->
+                <i 
+                class="fa fa-trash fa-2x icon"
+                [ngClass]="{'d-none': isLastImage() || !userHasDeletePermission()}" 
+                aria-hidden="true" 
+                (click)="enableDeleteState()"
+                ></i>
+    
+            </div>
+    
         </div>
-
-
-        <!-- Image Edit/Delete/Create Buttons -->
-        <div class="edit-image-buttons">
-            <!-- Create Image Button -->
-            <i 
-            class="fa fa-plus-square-o fa-2x icon" 
-            [ngClass]="{'d-none': !userHasCreatePermission()}"  
-            aria-hidden="true" 
-            (click)="enableCreateState()"
-            ></i>
-
-            <!-- Update Image button -->
-            <i 
-            class="fa fa-pencil fa-2x icon" 
-            [ngClass]="{'d-none': !userHasUpdatePermission()}" 
-            aria-hidden="true" 
-            (click)="enableUpdateState()"
-            ></i>
-
-            <!-- Delete Image Button -->
-            <i 
-            class="fa fa-trash fa-2x icon"
-            [ngClass]="{'d-none': isLastImage() || !userHasDeletePermission()}" 
-            aria-hidden="true" 
-            (click)="enableDeleteState()"
-            ></i>
-
+    
+        <!-- Next Image Arrow -->
+        <i
+        class="col-md-1 col-1 fa fa-arrow-right fa-1-5x icon"
+        [ngClass]="{'mouseoverVisible': !isLastImage(), 'deactivated-icon d-none': isLastImage()}" 
+        aria-hidden="true" 
+        (click)="incrementVisibleImageIndex()"
+        ></i>
+    </div>
+    
+    <!-- Create/Update Image Form -->
+    <div *ngIf="componentState === constants.createState || componentState === constants.updateState" class="card p-3 m-2">
+        <!-- Create/Update Heading -->
+        <h5 class="text-center">
+            <span *ngIf="componentState === constants.createState">Creating Image</span>
+            <span *ngIf="componentState === constants.updateState">Updating this image:</span>
+        </h5>
+    
+        <!-- Update Image -->
+        <div *ngIf="componentState === constants.updateState" class="image-container">
+            <span class="main-image">
+                <img title="None" class="gallery-image" [src]="constants.wikiUrl + getCurrentMainImage().image" alt="">
+            </span>
         </div>
-
+    
+        <!-- Create/Update Form -->
+        <app-formly-formcontainer 
+        [model]="model" 
+        [fields]="fields"
+        [enctype]="'multipart/form-data'"
+        (submit)="onSubmit()" 
+        (cancel)="onCancel()"
+        ></app-formly-formcontainer>
+    
     </div>
-
-    <!-- Next Image Arrow -->
-    <i
-    class="col-md-1 col-2 fa fa-arrow-right fa-2x ml-5 icon"
-    [ngClass]="{'mouseoverVisible': !isLastImage(), 'deactivated-icon d-none': isLastImage()}" 
-    aria-hidden="true" 
-    (click)="incrementVisibleImageIndex()"
-    ></i>
+    
+    <!-- Delete "Form" -->
+    <div *ngIf="componentState === constants.deleteState" class="card p-3 m-2">
+        <!-- Delete Heading -->
+        <h5 class="text-center">Deleting this image:</h5>
+    
+        <!-- Delete Image  -->
+        <div class="image-container">
+            <span class="main-image">
+                <img title="None" class="gallery-image" [src]="constants.wikiUrl + getCurrentMainImage().image" alt="">
+            </span>
+        </div>
+    
+        <!-- Delete Question -->
+        <div class="text-center mt-3">
+            Do you really want to delete this image?
+            <div class="btn btn-secondary mr-3" (click)="onCancel()"> No </div>
+            <div class="btn btn-danger" (click)="deleteCurrentMainImage()"> Yes </div>
+        </div>
+    </div>
+    
+    <ng-template #defaultImage>
+        <a [href]="constants.defaultImageUrl" class="main-image">
+            <img title="None" class="gallery-image" [src]="constants.defaultImageUrl" alt="">
+        </a>
+    </ng-template>
 </div>
-
-<!-- Create/Update Image Form -->
-<div *ngIf="componentState === constants.createState || componentState === constants.updateState" class="card p-3 m-2">
-    <!-- Create/Update Heading -->
-    <h5 class="text-center">
-        <span *ngIf="componentState === constants.createState">Creating Image</span>
-        <span *ngIf="componentState === constants.updateState">Updating this image:</span>
-    </h5>
-
-    <!-- Update Image -->
-    <div *ngIf="componentState === constants.updateState" class="image-container">
-        <span class="main-image">
-            <img title="None" class="gallery-image" [src]="constants.wikiUrl + getCurrentMainImage().image" alt="">
-        </span>
-    </div>
-
-    <!-- Create/Update Form -->
-    <app-formly-formcontainer 
-    [model]="model" 
-    [fields]="fields"
-    [enctype]="'multipart/form-data'"
-    (submit)="onSubmit()" 
-    (cancel)="onCancel()"
-    ></app-formly-formcontainer>
-
-</div>
-
-<!-- Delete "Form" -->
-<div *ngIf="componentState === constants.deleteState" class="card p-3 m-2">
-    <!-- Delete Heading -->
-    <h5 class="text-center">Deleting this image:</h5>
-
-    <!-- Delete Image  -->
-    <div class="image-container">
-        <span class="main-image">
-            <img title="None" class="gallery-image" [src]="constants.wikiUrl + getCurrentMainImage().image" alt="">
-        </span>
-    </div>
-
-    <!-- Delete Question -->
-    <div class="text-center mt-3">
-        Do you really want to delete this image?
-        <div class="btn btn-secondary mr-3" (click)="onCancel()"> No </div>
-        <div class="btn btn-danger" (click)="deleteCurrentMainImage()"> Yes </div>
-    </div>
-</div>
-
-<ng-template #defaultImage>
-    <a [href]="constants.defaultImageUrl" class="main-image">
-        <img title="None" class="gallery-image" [src]="constants.defaultImageUrl" alt="">
-    </a>
-</ng-template>
