Fixed searchbar not spreading properly

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -45,7 +45,7 @@
 .search-input{
     background-color: #1f1e1f;
     border: none;
-    max-width: 100%;
+    width: 100%;
     outline: none;
     color: white;
 }
