--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,7 +2,7 @@
     <article>
         <h1>Log In</h1>
         <div class="mb-3">{{extraMessage}}</div>
-        <form>
+        <form (submit)="onSubmit()" (keydown)="submitOnEnterPress($event)">
             <formly-form [model]="model" [fields]="fields" [form]="form"></formly-form>
             <div class="btn btn-secondary" (click)="onSubmit()">Login</div>
         </form>
