Added components for 504 errors and wiki1 requests

--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -7,7 +7,7 @@
     
     <div>
         <a class="btn btn-secondary" routerLink="{{constants.getRoutePath(router, 'home1')}}"> 
-            Back To Wiki 
+            Back To Frontpage 
         </a>
     </div>
 </div>
