--- a/src/app/components/articles/map/map.component.scss
+++ b/src/app/components/articles/map/map.component.scss
@@ -16,6 +16,8 @@ select {
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     color: white;
     font-weight: bold;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
 }
 
 .main{
